crates/monochange/tests/snapshots/cli_clap_help__clap_long_help__monochange_run_release.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: render_help_snapshot(&path)
---
Version: [current]
Command: monochange run release

Prepare a pull request release from discovered change files. It should only be run in a github action.

[1m[97mUsage:[0m monochange run release [--dry-run] [--diff] [--prepared-release <PATH>] [--format <FORMAT>] [--no-verify] [--commit] [--create-pr] [--write-empty-release-record]

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mRelease Options:[0m
      [93m--dry-run[0m
          Run the command in dry-run mode when supported

      [93m--diff[0m
          Show unified file diffs for prepared release changes

      [93m--prepared-release[0m[95m [0m[95m<PATH>[0m
          Read or write the prepared release artifact at a specific path

[1m[96mOptions:[0m
      [93m--format[0m[95m [0m[95m<FORMAT>[0m
          [default: text]
          [possible values: text, json, json-min, markdown]

      [93m--no-verify[0m[95m[=[0m[95m<NO_VERIFY>[0m[95m][0m
          [default: true]
          [possible values: true, false]

      [93m--commit[0m
          Whether to commit the changes

      [93m--create-pr[0m
          Whether to create the PR after the commit

      [93m--write-empty-release-record[0m
          Whether to write release records when no packages are released

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress result, progress, and diagnostic output without changing execution

  [93m-v[0m, [93m--verbose[0m
          Show full result lists and logs, every step timing, and progress notes

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr

          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree

Examples:
  monochange run release --dry-run --format text
  monochange run release --dry-run --format json
  monochange run release --dry-run --diff
  monochange run release

Planning reminders:
  - Direct package changes propagate to dependents using defaults.parent_bump or the target's bump_propagation override (including inherit with an optional bump_propagation_max clamp).
  - Group synchronization happens before final output is rendered.
  - Explicit versions on grouped members propagate to the whole group.
