crates/monochange/tests/snapshots/cli_clap_help__clap_long_help__monochange_skill.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: render_help_snapshot(&path)
---
Version: [current]
Command: monochange skill

The monochange agent skill ships inside this binary, so it works without network access, an npm package, or a cloned repository. `monochange skill read` prints a topic as raw Markdown for an agent to consume, and `monochange skill install --dir` writes the whole skill into an agent runtime's skill directory. Bare `monochange skill` lists every bundled topic.

[1m[97mUsage:[0m [93mmonochange skill[0m [95m[OPTIONS][0m [95m[COMMAND][0m

[1m[96mCommands:[0m
  [93mread[0m     Print a bundled skill topic as raw Markdown
  [93minstall[0m  Write the bundled skill into an agent runtime's skill directory

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help (see a summary with '-h')

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress result, progress, and diagnostic output without changing execution

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr

          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree

Examples:
  monochange skill
  monochange skill read monochange
  monochange skill read configuration
  monochange skill install --dir ./.claude/skills/monochange
  monochange skill install --dir ~/.codex/skills/monochange --force

The skill directory is normally named `monochange` inside a runtime's skills
folder. Existing skills are never replaced unless --force is passed.
