crates/monochange/tests/snapshots/cli_clap_help__clap_long_help__monochange_snapshot.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: render_help_snapshot(&path)
---
Version: [current]
Command: monochange snapshot

Print a normalized JSON snapshot of the CLI surface

[1m[97mUsage:[0m [93mmonochange snapshot[0m [95m[OPTIONS][0m [95m[COMMAND]...[0m

[1m[96mArguments:[0m
  [95m[COMMAND]...[0m
          Optional command path to render

[1m[96mOptions:[0m
      [93m--view[0m[95m [0m[95m<VIEW>[0m
          Snapshot view to render

          [default: full]
          [possible values: full, light, index]

      [93m--package[0m[95m [0m[95m<PACKAGE>[0m
          Capture the configured cli snapshot for this package instead of the monochange surface

      [93m--save[0m
          Write the captured snapshot as the committed baseline under .monochange/cli-snapshots/

      [93m--list[0m
          List registered package clis and their baseline status

  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress result, progress, and diagnostic output without changing execution

  [93m-v[0m, [93m--verbose[0m
          Show full result lists and logs, every step timing, and progress notes

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr

          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree
