crates/monochange/tests/snapshots/cli_clap_help__clap_long_help__monochange_step_affected_packages.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: render_help_snapshot(&path)
---
Version: [current]
Command: monochange step affected-packages

Compute affected packages from a prepared release plan

[1m[97mUsage:[0m monochange step affected-packages [--dry-run] [--format <FORMAT>] [--changed-paths <CHANGED_PATHS>] [--from <FROM>] [--verify] [--label <LABEL>]

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mRelease Options:[0m
      [93m--dry-run[0m
          Run the command in dry-run mode when supported

[1m[96mOptions:[0m
      [93m--format[0m[95m [0m[95m<FORMAT>[0m
          Result format: text, Markdown, pretty JSON, or compact JSON

          [possible values: text, json, json-min, md]

      [93m--changed-paths[0m[95m [0m[95m<CHANGED_PATHS>[0m
          Changed workspace paths to evaluate

      [93m--from[0m[95m [0m[95m<FROM>[0m
          Git ref to use as the release, comparison, or verification source

      [93m--verify[0m
          Fail when affected packages are missing required changesets

      [93m--label[0m[95m [0m[95m<LABEL>[0m
          Pull-request labels that affect changeset policy

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress result, progress, and diagnostic output without changing execution

  [93m-v[0m, [93m--verbose[0m
          Show full result lists and logs, every step timing, and progress notes

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr

          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree
